[gd_scene load_steps=10 format=3 uid="uid://brbviolob1hjc"]

[ext_resource type="FontFile" uid="uid://c7yt8i7uy4bel" path="res://textures/fonts/Roboto-VariableFont_wdth,wght.ttf" id="1_bpi0q"]
[ext_resource type="Script" uid="uid://bt6f47ismqv2j" path="res://scripts/pause_menu.gd" id="1_vmyb1"]
[ext_resource type="Texture2D" uid="uid://xsx1uif6i1oq" path="res://icon.svg" id="2_vmyb1"]
[ext_resource type="Texture2D" uid="uid://dhmu0toe1itnr" path="res://textures/special/clip.png" id="3_myy0f"]
[ext_resource type="Texture2D" uid="uid://dutip72dl002r" path="res://textures/special/origin.png" id="4_sjs17"]
[ext_resource type="LabelSettings" uid="uid://b5bcy41qe5cki" path="res://textures/button_text.tres" id="5_myy0f"]
[ext_resource type="StyleBox" uid="uid://cge86l20ly4fy" path="res://textures/game_UI_border.tres" id="7_sjs17"]

[sub_resource type="LabelSettings" id="LabelSettings_u8tnp"]
font = ExtResource("1_bpi0q")
font_size = 175
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_stj27"]
font = ExtResource("1_bpi0q")
font_size = 40
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="Pause menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vmyb1")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -297.0
offset_right = 297.0
offset_bottom = 207.0
grow_horizontal = 2
text = "Pause"
label_settings = SubResource("LabelSettings_u8tnp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resume Button" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.0
offset_top = -74.0
offset_right = 194.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("2_vmyb1")
texture_hover = ExtResource("3_myy0f")
ignore_texture_size = true
stretch_mode = 1

[node name="Label" type="Label" parent="Resume Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Resume"
label_settings = ExtResource("5_myy0f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quit Button" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.0
offset_top = 46.0
offset_right = 194.0
offset_bottom = 146.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_sjs17")
texture_hover = ExtResource("3_myy0f")
ignore_texture_size = true
stretch_mode = 1

[node name="Label" type="Label" parent="Quit Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"
label_settings = ExtResource("5_myy0f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="return confirm" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="return confirm"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -269.0
offset_top = -136.0
offset_right = 269.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("7_sjs17")

[node name="Label" type="Label" parent="return confirm/Panel"]
layout_mode = 0
offset_right = 539.0
offset_bottom = 178.0
text = "Are you sure you want to quit?"
label_settings = SubResource("LabelSettings_stj27")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Confirm Button" type="TextureButton" parent="return confirm/Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -116.0
offset_right = 230.0
offset_bottom = -16.0
grow_vertical = 0
texture_normal = ExtResource("4_sjs17")
texture_hover = ExtResource("3_myy0f")
ignore_texture_size = true
stretch_mode = 1

[node name="Label" type="Label" parent="return confirm/Panel/Confirm Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -9.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
text = "Yes"
label_settings = ExtResource("5_myy0f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Deny Button" type="TextureButton" parent="return confirm/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -228.0
offset_top = -116.0
offset_right = -28.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("4_sjs17")
texture_hover = ExtResource("3_myy0f")
ignore_texture_size = true
stretch_mode = 1

[node name="Label" type="Label" parent="return confirm/Panel/Deny Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -9.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
text = "No"
label_settings = ExtResource("5_myy0f")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Resume Button" to="." method="unpause"]
[connection signal="pressed" from="Quit Button" to="." method="pause_to_confirm"]
[connection signal="pressed" from="return confirm/Panel/Confirm Button" to="." method="load_menu"]
[connection signal="pressed" from="return confirm/Panel/Deny Button" to="." method="confirm_to_pause"]
